# fastapi-service

./: .gitignore  LICENSE  README.md  mkdocs.yaml  noxfile.py  pyproject.toml  pytest.ini
assets/: fastapi-service-logo.psd
docs/: index.md
docs/advanced/: migration.md  plain-objects.md
docs/concepts/: dependency-injection.md  injectable.md  scopes.md
docs/getting-started/: installation.md  quick-start.md  tutorial.md
examples/hash_service/: README.md  app.py  db.py  service.py  tests.py
src/fastapi_service/: __init__.py  additional_context_manager.py  constants.py  container.py  enums.py  helpers.py  injectable.py  oracle.py  protocols.py  typing.py
tests/: README.md  benchmark.py  conftest.py  seed.py
tests/integration/: test_fastapi_integration_basic.py  test_injectable_new_fastapi_request.py
tests/performance/: test_performance_load.py
tests/security/: test_security_input_validation.py
tests/unit/: test_basics.py  test_container_edge_cases.py  test_container_resolution.py  test_helpers_body_parsing.py  test_injectable_basic.py  test_injectable_subclass_behavior.py
