[project]
name = "fastapi-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.121.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "nox>=2025.11.12",
]
test = [
    "httpx>=0.28.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]
examples = [
    "fastapi>=0.121.2",
    "typing-extensions>=4.15.0",
]

[tool.ruff]
exclude = ["examples", "docs", "scripts", "scripts/*", "noxfile.py", "tests"]

[tool.pylint]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "W0511",  # fixme
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0212",  # protected-access
    "W0703",  # broad-except
    "E0401",  # import-error
]
extension-pkg-whitelist = ["pydantic"]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "U"]
max-line-length = 110
ignore-patterns = ["^\\.#"]
ignore-paths = ["tests/", "examples/", "docs/", "scripts/"]


[tool.mypy]
mypy_path = "src"
disable_error_code = [
    "import-not-found",
]


[tool.pyright]
reportMissingImports = "none"